<resources>
    <string name="app_name">算算</string>
    <string name="app_title">算算</string>
    <string name="app_welcome">欢迎来到小学生口算训练营</string>
    <string name="app_practice_mode">练习模式</string>
    <string name="app_break_mode">闯关模式</string>
    <string name="tabs_height">60dp</string>
    <string name="tabs_item_tab1"> 训练</string>
    <string name="tabs_item_tab2"> 分析</string>
    <string name="tabs_item_tab3">错题</string>
    <string name="tabs_item_tab_size">25dp</string>
    <string name="tabs_item_textSize">18sp</string>

    <string name="subject_difficulty">难度选择：</string>
    <string name="subject_number">题量设置：</string>
    <string name="subject_number_tip">建议10-60最佳,最大999</string>
    <string name="subject_range">取值范围：</string>
    <string name="single_mode">简单（+、-）</string>
    <string name="mixed_mode">复杂（*、/）</string>

    <string name="app_begin">开始答题</string>

    <string name="subject_is_empty">题量不能为空，请输入再作答</string>

    <string name="pratice_doing">正在答题</string>
    <string name="pratice_time">用时 </string>
    <string name="break_time">倒计时 </string>

    <string name="last_one">上一题</string>
    <string name="next_one">下一题</string>
    <string name="clear">清除</string>
    <string name="pause_test">提交</string>

    <string name="max_num_number">输入的数不能超过3位</string>

    <string name="the_first_page">这已经是第一题了</string>
    <string name="the_last_page">这是最后一题了,是否提交答案</string>
    <string name="commit">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="pactice_again">再次练习</string>

    <string name="subject_num"> 总题数</string>
    <string name="subject_right_num"> 正确题数</string>
    <string name="used_time"> 总用时</string>
    <string name="total_score"> 总分 : %d 分</string>

    <string name="analyse_subject_num"> 共刷题</string>
    <string name="analyse_subject_right_num"> 做对题</string>
    <string name="analyse_subject_right_rate"> 正确率</string>

    <string name="error_analysis">错题解析</string>
    <string name="all_analysis">全部解析</string>
    <string name="continue_do">继续练习</string>
    <string name="subject_report">答题报告</string>

    <string name="break_introduce">闯关介绍</string>
    <string name="break_introduce_content">一共20个关卡，完成上一个关卡才能解锁下一个关卡，全部挑战完成后，想继续挑战可以重置关卡</string>
    <string name="reset_break">重置关卡</string>

    <string name="no_break">该关卡未解锁</string>

    <string name="answer_is_wrong">答案错误！！</string>

    <string name="break_successful">闯关成功！是否结束本次关卡</string>
    <string name="break_end">闯关成功！恭喜你通过了所有的关卡</string>
    <string name="break_failed">闯关失败！期待你下次再来</string>

    <string name="break_nm">第%d关卡</string>

    <string name="pratice_sure_exit">你是否要退出本次练习</string>
    <string name="pratice_sure_commit">你确定要提交本次练习的答案么</string>
    <string name="break_sure_exit">你是否要退出本次闯关</string>
    <string name="app_sure_exit">你是否要退出口算器么</string>

    <string name="break_sure_reset">你是否要重置各个关卡</string>

    <string name="analyse_no_data">亲，现在暂无数据噢</string>

    <string name="analyse_practice_data">习题分析</string>

    <string name="analyse_seven_data">近七次的练习分析</string>

    <string name="error_subject">错题集</string>

    <string name="error_no_subject">你很棒！目前还没有错题噢</string>

    <string name="no_network">当前网络不可用，语音功能暂时关闭</string>

    <string name="subject_num_must_positive">练习的题量必须大于0</string>


</resources>
