<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.guangwai.project.ystumad.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9FB6CD"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/app_title"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EBEBEB"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="6dp"
            android:background="#FFFFFF"
            android:text="@string/app_welcome"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/practice_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#D1EEEE"
            android:gravity="center"
            android:text="@string/app_practice_mode"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/break_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D1EEEE"
            android:gravity="center"
            android:text="@string/app_break_mode"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
