<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/table_style"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/subject_difficulty"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/mode_choose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mixed_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/single_mode"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/single_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mixed_mode"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/subject_number"
                android:textSize="18sp" />

            <!--<Spinner-->
            <!--android:id="@+id/subject_number"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="6dp"-->
            <!--android:entries="@array/subject_num"-->
            <!--android:spinnerMode="dropdown" />-->

            <EditText
                android:id="@+id/subject_number"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/num_shape_corners"
                android:cursorVisible="false"
                android:inputType="number"
                android:maxLength="3"
                android:padding="10dp"
                android:text="5"
                android:gravity="center"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="bottom"
                android:text="@string/subject_number_tip"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/subject_range"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/subject_range"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:dropDownWidth="120dp"
                android:entries="@array/subject_range"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/do_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_common_select"
        android:text="@string/app_begin"
        android:textColor="#ffffff" />
</LinearLayout>
