<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.guangwai.project.ystumad.exercise.PracticeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3e6c91"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/practice_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/practice_back"
            android:gravity="center"
            android:text="@string/pratice_doing"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_toLeftOf="@+id/practice_timer"
            android:gravity="center"
            android:text="@string/pratice_time"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Chronometer
            android:id="@+id/practice_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:format="%s"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subject_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8 + 9 = "
                android:textSize="22sp" />

            <TextView
                android:id="@+id/subject_result"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/num_shape_corners"
                android:gravity="center"
                android:padding="10dp"
                android:textCursorDrawable="@null"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/interactive_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/microphone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/microphone" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:columnCount="3"
                android:rowCount="4">

                <TextView
                    android:id="@+id/num_one"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_two"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_three"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="3"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_four"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_five"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="5"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_six"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="6"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_seven"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="7"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_eight"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="8"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_nine"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="9"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pause"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/pause_test"
                    android:textColor="#3e6c91"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/num_zero"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/clear"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textColor="#3e6c91"
                    android:textSize="20sp" />

            </GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#CCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/last_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/last_one"
                    android:textColor="#3e6c91"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/page"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1/10"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/next_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/next_one"
                    android:textColor="#3e6c91"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
